# token-explorer-back

./: AGENTS.md  README.md  pyproject.toml
solexplorer/: main.py
solexplorer/analyse/: get_score.py
solexplorer/api/v1/: router.py  token_analyse.py
solexplorer/config/: app.py
solexplorer/schemas/: score.py  token.py
solexplorer/solana/: get_token.py
tests/: test_get_token.py  test_score.py
