[tool.poetry]
package-mode = false

[project]
name = "token-explorer-back"
version = "0.1.0"
description = ""
authors = [
    {name = "nikkol615",email = "nik.kolobanov@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "solders (>=0.27.1,<0.28.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
